Fixed tags not wrapping

--- a/src/style/components/_movie_description.sass
+++ b/src/style/components/_movie_description.sass
@@ -8,4 +8,4 @@
     @apply text-justify
 
 .metadata-container
-  @apply flex items-start mb-4 justify-between
+  @apply flex items-start mb-4 justify-between flex-wrap
