--- a/src/style/components/_tag.sass
+++ b/src/style/components/_tag.sass
@@ -1,5 +1,5 @@
 .genre-tags
-    @apply flex gap-4 justify-center
+    @apply flex gap-4 justify-center flex-wrap
     
 .tag
     @apply bg-blue-500 relative inline rounded-md px-4  py-1 text-white z-20
